--- a/Multilayer.Presentation/packages.config
+++ b/Multilayer.Presentation/packages.config
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
-  <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="jQuery" version="2.1.4" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net45" />
+  <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
