--- a/MultiLayer.Infrasturcture/MultiLayer.Infrasturcture.csproj
+++ b/MultiLayer.Infrasturcture/MultiLayer.Infrasturcture.csproj
@@ -40,6 +40,12 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -54,6 +60,10 @@
     <Compile Include="Migrations\201507081349551_InitialCreate.cs" />
     <Compile Include="Migrations\201507081349551_InitialCreate.Designer.cs">
       <DependentUpon>201507081349551_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706041921291_IdentityEntities.cs" />
+    <Compile Include="Migrations\201706041921291_IdentityEntities.Designer.cs">
+      <DependentUpon>201706041921291_IdentityEntities.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,6 +83,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201507081349551_InitialCreate.resx">
       <DependentUpon>201507081349551_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706041921291_IdentityEntities.resx">
+      <DependentUpon>201706041921291_IdentityEntities.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
