--- a/MultiLayer.Presentation/packages.config
+++ b/MultiLayer.Presentation/packages.config
@@ -5,11 +5,19 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
@@ -17,6 +25,7 @@
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
