--- a/MultiLayer.Services/packages.config
+++ b/MultiLayer.Services/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
 </packages>
